Bill to add back button, fix overflowing issue, at homepage centered the wallet and coins details

--- a/src/routes/HomePage.module.css
+++ b/src/routes/HomePage.module.css
@@ -37,6 +37,7 @@
   align-content: center;
   justify-content: center;
   justify-items: center;
+  margin-right: 20px;
 }
 
 .h2,
